--- a/week2/frontend/index.html
+++ b/week2/frontend/index.html
@@ -1,74 +1,182 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Action Item Extractor</title>
-    <style>
-      body { font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif; margin: 2rem auto; max-width: 800px; padding: 0 1rem; }
-      h1 { font-size: 1.5rem; }
-      textarea { width: 100%; min-height: 160px; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, monospace; }
-      button { padding: 0.5rem 1rem; }
-      .items { margin-top: 1rem; }
-      .item { display: flex; align-items: center; gap: 0.5rem; padding: 0.25rem 0; }
-      .muted { color: #6b7280; font-size: 0.875rem; }
-      .row { display: flex; gap: 0.5rem; align-items: center; }
-    </style>
-  </head>
-  <body>
-    <h1>Action Item Extractor</h1>
-    <p class="muted">Paste notes and extract actionable items. Minimal raw HTML frontend.</p>
 
-    <label for="text">Notes</label>
-    <textarea id="text" placeholder="Paste notes here...&#10;e.g.&#10;- [ ] Set up database&#10;- Implement extract endpoint"></textarea>
-    <div class="row">
-      <label class="row"><input id="save_note" type="checkbox" checked /> Save as note</label>
-      <button id="extract">Extract</button>
-    </div>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Action Item Extractor</title>
+  <style>
+    body {
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
+      margin: 2rem auto;
+      max-width: 800px;
+      padding: 0 1rem;
+    }
 
-    <div class="items" id="items"></div>
+    h1 {
+      font-size: 1.5rem;
+    }
 
-    <script>
-      const $ = (sel) => document.querySelector(sel);
-      const itemsEl = $('#items');
-      const btn = $('#extract');
-      btn.addEventListener('click', async () => {
-        const text = $('#text').value;
-        const save = $('#save_note').checked;
-        itemsEl.textContent = 'Extracting...';
-        try {
-          const res = await fetch('/action-items/extract', {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ text, save_note: save }),
-          });
-          if (!res.ok) throw new Error('Request failed');
-          const data = await res.json();
-          if (!data.items || data.items.length === 0) {
-            itemsEl.innerHTML = '<p class="muted">No action items found.</p>';
-            return;
-          }
-          itemsEl.innerHTML = data.items.map(it => (
-            `<div class="item"><input type="checkbox" data-id="${it.id}" /> <span>${it.text}</span></div>`
-          )).join('');
-          itemsEl.querySelectorAll('input[type="checkbox"]').forEach(cb => {
-            cb.addEventListener('change', async (e) => {
-              const id = e.target.getAttribute('data-id');
-              await fetch(`/action-items/${id}/done`, {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ done: e.target.checked }),
-              });
+    textarea {
+      width: 100%;
+      min-height: 160px;
+      font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, Liberation Mono, monospace;
+    }
+
+    button {
+      padding: 0.5rem 1rem;
+    }
+
+    .items {
+      margin-top: 1rem;
+    }
+
+    .item {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.25rem 0;
+    }
+
+    .muted {
+      color: #6b7280;
+      font-size: 0.875rem;
+    }
+
+    .row {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+    }
+
+    .notes {
+      margin-top: 1rem;
+    }
+
+    .note {
+      border: 1px solid #e5e7eb;
+      border-radius: 0.5rem;
+      padding: 1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    .note-header {
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 0.5rem;
+    }
+
+    .note-id {
+      font-weight: bold;
+      color: #374151;
+    }
+
+    .note-date {
+      color: #6b7280;
+      font-size: 0.875rem;
+    }
+
+    .note-content {
+      color: #1f2937;
+      white-space: pre-wrap;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>Action Item Extractor</h1>
+  <p class="muted">Paste notes and extract actionable items. Minimal raw HTML frontend.</p>
+
+  <label for="text">Notes</label>
+  <textarea id="text"
+    placeholder="Paste notes here...&#10;e.g.&#10;- [ ] Set up database&#10;- Implement extract endpoint"></textarea>
+  <div class="row">
+    <label class="row"><input id="save_note" type="checkbox" checked /> Save as note</label>
+    <button id="extract">Extract</button>
+    <button id="extract_llm">Extract LLM</button>
+    <button id="list_notes">List Notes</button>
+  </div>
+
+  <div class="items" id="items"></div>
+  <div class="notes" id="notes"></div>
+
+  <script>
+    const $ = (sel) => document.querySelector(sel);
+    const itemsEl = $('#items');
+    const notesEl = $('#notes');
+    const extractBtn = $('#extract');
+    const extractLlmBtn = $('#extract_llm');
+    const listNotesBtn = $('#list_notes');
+
+    async function extractItems(method) {
+      const text = $('#text').value;
+      const save = $('#save_note').checked;
+      itemsEl.textContent = 'Extracting...';
+      notesEl.innerHTML = '';
+      try {
+        const res = await fetch(`/action-items/extract?method=${method}`, {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ text, save_note: save }),
+        });
+        if (!res.ok) throw new Error('Request failed');
+        const data = await res.json();
+        if (!data.items || data.items.length === 0) {
+          itemsEl.innerHTML = '<p class="muted">No action items found.</p>';
+          return;
+        }
+        itemsEl.innerHTML = data.items.map(it => (
+          `<div class="item"><input type="checkbox" data-id="${it.id}" /> <span>${it.text}</span></div>`
+        )).join('');
+        itemsEl.querySelectorAll('input[type="checkbox"]').forEach(cb => {
+          cb.addEventListener('change', async (e) => {
+            const id = e.target.getAttribute('data-id');
+            await fetch(`/action-items/${id}/done`, {
+              method: 'POST',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ done: e.target.checked }),
             });
           });
-        } catch (err) {
-          console.error(err);
-          itemsEl.textContent = 'Error extracting items';
+        });
+      } catch (err) {
+        console.error(err);
+        itemsEl.textContent = 'Error extracting items';
+      }
+    }
+
+    async function listNotes() {
+      itemsEl.innerHTML = '';
+      notesEl.textContent = 'Loading notes...';
+      try {
+        const res = await fetch('/notes', {
+          method: 'GET',
+          headers: { 'Content-Type': 'application/json' },
+        });
+        if (!res.ok) throw new Error('Request failed');
+        const notes = await res.json();
+        if (!notes || notes.length === 0) {
+          notesEl.innerHTML = '<p class="muted">No notes found.</p>';
+          return;
         }
-      });
+        notesEl.innerHTML = notes.map(note => (
+          `<div class="note">
+              <div class="note-header">
+                <span class="note-id">Note #${note.id}</span>
+                <span class="note-date">${note.created_at}</span>
+              </div>
+              <div class="note-content">${note.content}</div>
+            </div>`
+        )).join('');
+      } catch (err) {
+        console.error(err);
+        notesEl.textContent = 'Error loading notes';
+      }
+    }
 
-    </script>
-  </body>
-  </html>
+    extractBtn.addEventListener('click', () => extractItems('heuristic'));
+    extractLlmBtn.addEventListener('click', () => extractItems('llm'));
+    listNotesBtn.addEventListener('click', listNotes);
+  </script>
+</body>
 
-
+</html>
